--- a/Taxi/Taxi/style.css
+++ b/Taxi/Taxi/style.css
@@ -1,7 +1,7 @@
 ﻿    html, body {
-        margin: 0;
-        padding: 0;
-        color: white;
+        margin: 0px;
+        padding: 0px;
+        color: black;
         background-color: #2c3e50;    
     }
 
@@ -22,35 +22,33 @@
     }
 
     header {
+        margin:0px;
+        padding:0px;
         position: relative;
-        min-height: 20px;
-        padding: 20px;
-        z-index: 5;
+        height:16vh;
         background-color: white;
     }
 
     main {
-        margin:10px 0px 10px 210px;
+        margin:1vh 0px 1vh 210px;
         display: block;
-        height: 600px;
-        width:100%;
+        height: 66vh; // 600px;
         color: black;
         background-color: white;
     }
 
     nav {
-        margin:10px 0px 10px 0px;
+        margin:1vh 0px 1vh 0px;
         display:block;
         width:200px;
         background-color:white;
         float:left;
-        height:600px;
+        height:66vh;
     }
 
     footer {
-        margin-top:10px;
-        min-height: 50px;
-        padding: 20px;
+        margin-top:1vh;
+        height:16vh;
         font-size: 14px;
         color: black;
         background-color: white;
@@ -59,5 +57,3 @@
     span {
         color:black;
     }
-    
-    //sd
